# wiscmc

./: .gitignore  LICENSE  README.md  condor_submit.py  fragment.py  pyproject.toml
campaigns/Run3Summer24wmLHE/: build_env.sh  getpileupfiles.sh  run.sh
utils/: __init__.py  utils.py
wiscmc/: condor_submit.py  env.sh  main.py
wiscmc/campaigns/Run3Summer24wmLHE/: build_env.sh  run.sh
